overlay: Add rounded corners by default
wight554:
drop lines with default values

Change-Id: I44d5df58068afa81a74365970ae51e7def86f47c
Signed-off-by: Vol Zhdanov <wight554@gmail.com>
Signed-off-by: celtare21 <celtare21@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <!-- Volume dialog vertical offset from the top of the screen -->
     <dimen name="volume_offset_top">156px</dimen>
     <dimen name="qs_corner_content_padding">6dp</dimen>
-</resources>
+    <dimen name="rounded_corner_radius">20dp</dimen>
+</resources> 
